--- a/product.html
+++ b/product.html
@@ -344,10 +344,8 @@
           <button class="lang-btn">EN</button>
         </div>
         <div>
-          <a href="#" class="nav-link">الرئيسية</a>
-          <a href="#" class="nav-link">المنتجات</a>
-          <a href="#" class="nav-link">الإعدادات</a>
-          <a href="#" class="primary-btn">تسجيل الخروج</a>
+          <a href="index.html" class="nav-link">الرئيسية</a>
+        
         </div>
       </div>
     </nav>
@@ -587,3 +585,4 @@
   </script>
 </body>
 </html>
+
