--- a/product.html
+++ b/product.html
@@ -355,7 +355,7 @@
           <button id="btn-en" class="lang-btn">EN</button>
         </div>
         <div>
-          <a href="#" id="nav-home" class="nav-link">الرئيسية</a>
+          <a href="index.html" id="nav-home" class="nav-link">الرئيسية</a>
           <a href="#" id="nav-products" class="nav-link">المنتجات</a>
           <a href="#" id="nav-settings" class="nav-link">الإعدادات</a>
           <a href="#" id="nav-logout" class="primary-btn">تسجيل الخروج</a>
@@ -909,4 +909,5 @@
   </script>
 </body>
 </html>
+
 
