--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
 
     <section class="hero">
       <div>
-        <span class="tag" id="tag-text">قالب HTML/CSS جاهز – تحديثات مجانية</span>
+        <span class="tag" id="tag-text">قالب  جاهز – تحديثات مجانية</span>
         <h1 class="h1" id="headline">صفحة هبوط سريعة، أنيقة، وتحوّل الزائر إلى مشتري</h1>
-        <p class="lead" id="lead">احصل على القالب كاملاً مع ملفات HTML/CSS ورسوم متحركة خفيفة، ودعم اتجاه عربي RTL. الشراء آمن عبر PayPal.</p>
+        <p class="lead" id="lead">احصل على القالب كاملاً مع ملفات  ورسوم متحركة خفيفة، ودعم اتجاه عربي RTL. الشراء آمن عبر PayPal.</p>
 
         <div id="buy" class="card">
           <!-- خيارات الخطة -->
@@ -204,9 +204,9 @@
         nav_features: "المزايا",
         nav_faq: "الأسئلة",
         nav_buy: "اشترِ الآن",
-        tag: "قالب HTML/CSS جاهز – تحديثات مجانية",
+        tag: "قالب  جاهز – تحديثات مجانية",
         headline: "صفحة هبوط سريعة، أنيقة، وتحوّل الزائر إلى مشتري",
-        lead: "احصل على القالب كاملاً مع ملفات HTML/CSS ورسوم متحركة خفيفة، ودعم اتجاه عربي RTL. الشراء آمن عبر PayPal.",
+        lead: "احصل على القالب كاملاً مع ملفات  ورسوم متحركة خفيفة، ودعم اتجاه عربي RTL. الشراء آمن عبر PayPal.",
         once: "مرة واحدة",
         secure: "🔒 عملية دفع آمنة عبر PayPal – يمكنك استخدام البطاقة أو رصيدك.",
         foot: "© مشروعك – جميع الحقوق محفوظة",
@@ -234,9 +234,9 @@
         nav_features: "Features",
         nav_faq: "FAQ",
         nav_buy: "Buy Now",
-        tag: "HTML/CSS Template — Free updates",
+        tag: " Template — Free updates",
         headline: "Fast, elegant landing page that converts visitors to buyers",
-        lead: "Get the full template with HTML/CSS files and light animations. Supports RTL and is PayPal ready.",
+        lead: "Get the full template with  light animations. Supports RTL and is PayPal ready.",
         once: "One-time",
         secure: "🔒 Secure payment via PayPal — card or balance accepted.",
         foot: "© YourSite – All rights reserved",
@@ -463,3 +463,4 @@
   </script>
 </body>
 </html>
+
