--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
+  <meta name="google-adsense-account" content="ca-pub-8008281876968025">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title id="page-title">مشروعك – شراء القالب</title>
 
@@ -463,4 +464,5 @@
   </script>
 </body>
 </html>
+
 
