--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
   <!-- PayPal SDK (استبدل YOUR_CLIENT_ID بمفتاحك إن أردت) -->
   <script src="https://www.paypal.com/sdk/js?client-id=AXCgRghjsHN78Jn0QZEGzfPX69hUALOyjXdrL-dd8TLQnjBG3du3pLqV4RaibRlUAh4t3E6doZPUDVos&currency=USD" defer></script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8008281876968025"
+     crossorigin="anonymous"></script>
   <style>
     :root{
       --bg:#0f1221; --card:#161a2f; --text:#e9ecff; --muted:#a8b0d6;
@@ -464,5 +465,6 @@
   </script>
 </body>
 </html>
+
 
 
