--- a/product.html
+++ b/product.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="utf-8" />
+  <meta name="google-adsense-account" content="ca-pub-8008281876968025">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title id="page-title">مشروعك - إدارة المنتجات</title>
   <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;800&family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -909,5 +910,6 @@
   </script>
 </body>
 </html>
+
 
 
