--- a/product.html
+++ b/product.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8008281876968025"
+     crossorigin="anonymous"></script>
   <meta charset="utf-8" />
   <meta name="google-adsense-account" content="ca-pub-8008281876968025">
   <meta name="viewport" content="width=device-width,initial-scale=1" />
@@ -910,6 +912,7 @@
   </script>
 </body>
 </html>
+
 
 
 
